Fixed load on scroll getting stuck on filtered dataset and text overflow of short description

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -199,4 +199,8 @@ button {
   color: black;
   position: absolute;
   top: 77%;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical; 
 }
